# sudoku

./: .cproject  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Sudoku  SudokuApp.cpp  cmake_install.cmake  sudoku.pro
Debug/: makefile  sources.mk
Debug/model/: subdir.mk
Debug/model/unittests/: subdir.mk
Debug/model/unittests/gtest/src/gtest/googlemock/src/: subdir.mk
Debug/model/unittests/gtest/src/gtest/googlemock/test/: subdir.mk
Debug/model/unittests/gtest/src/gtest/googletest/codegear/: subdir.mk
Model/: SudokuInitiator.cpp  SudokuInitiator.h  SudokuModel.cpp  SudokuModel.h
View/: SudokuTableView.cpp  SudokuTableView.h  SudokuWidget.cpp  SudokuWidget.h
model/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Matrix.cpp  Matrix.hpp  MatrixGenerator.cpp  MatrixGenerator.hpp  Random.cpp  Random.hpp  cmake_install.cmake
model/generator/: MatrixGenerator.cpp  MatrixGenerator.hpp  Random.cpp  Random.hpp
model/unittests/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  MatrixGeneratorTest.cpp  cmake_install.cmake  matrixgentest
model/unittests/gtest/src/gtest-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
model/unittests/gtest/src/gtest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
model/unittests/gtest/src/gtest-build/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
model/unittests/gtest/src/gtest-stamp/: download-gtest.cmake  extract-gtest.cmake  verify-gtest.cmake
model/unittests/gtest/tmp/: gtest-cfgcmd.txt
(+4 files in other folders)
